--- a/.github/workflows/ASPM-Runner.yml
+++ b/.github/workflows/ASPM-Runner.yml
@@ -1,4 +1,4 @@
-name: "ASPM-RUNNER-ACCOUNT-1"
+name: "ASPM-RUNNER"
 on:
   pull_request:
     branches:
@@ -19,9 +19,10 @@ jobs:
     runs-on: "ubuntu-latest"
     env:
       workdir: "${{ github.workspace }}/wrkdir"
-      ACCOUNT_ID: "1"
-      CONNECTOR_ID: "8436"
-      API_KEY: "df587299f15b01f64e5886c2308f8ad95cb50d755758cb7e2e41d1990c6b7180"
+      ACCOUNT_ID: "5005"
+      CONNECTOR_ID: "4233"
+      XDG_CONFIG_HOME: "${{ github.workspace }}/wrkdir/.config"
+      SECURIN_LOG_DIR: "${{ github.workspace }}/wrkdir/logs"
 
     steps:
       - uses: "actions/checkout@v4"
@@ -40,7 +41,7 @@ jobs:
           # Fetch and configure AWS credentials
           echo "Fetching AWS credentials..."
           RESPONSE=$(curl -s -H "x-user-id: -1" -H "x-api-key: ${{ env.API_KEY }}" \
-            "https://slresultapi.qa.securin.io/resultapi/api/v1/accounts/${{ env.ACCOUNT_ID }}/aws/_token")
+            "https://slresultapi.uat.securin.io/resultapi/api/v1/accounts/${{ env.ACCOUNT_ID }}/aws/_token")
           
           ACCESS_KEY=$(echo "$RESPONSE" | jq -r '.accessKey')
           SECRET_KEY=$(echo "$RESPONSE" | jq -r '.secretKey')
@@ -56,7 +57,7 @@ jobs:
           aws configure set region "us-west-2"
           
           # Download runner
-          SCANNER_URL="s3://securin-qa-shiftleft/scanners/securin-cli/2.0.1/securin-runner"
+          SCANNER_URL="s3://securin-uat-shiftleft/scanners/securin-cli/2.0.1/securin-runner"
           aws s3 cp "$SCANNER_URL" "${{ env.workdir }}/src/ASPMRunner"
           chmod +x "${{ env.workdir }}/src/ASPMRunner"
           
@@ -66,11 +67,14 @@ jobs:
       - name: Run Scan
         working-directory: "${{ env.workdir }}/src"
         env:
+          XDG_CONFIG_HOME: "${{ env.workdir }}/.config"
+          SECURIN_LOG_FILE: "${{ env.workdir }}/logs/securin-cli.log"
           HOME: "${{ env.workdir }}"
         run: |
           touch "${{ env.workdir }}/logs/securin-cli.log"
           chmod 666 "${{ env.workdir }}/logs/securin-cli.log"
-          ./ASPMRunner scan --connector_id "${{ env.CONNECTOR_ID }}" --account_id "${{ env.ACCOUNT_ID }}" --api_key "${{ env.API_KEY }}"
+          
+          ./ASPMRunner scan --connector_id "${{ env.CONNECTOR_ID }}" --account_id "${{ env.ACCOUNT_ID }}" --api_key "${{ secrets.API_KEY }}" --scan_type SCA,SECRETS,CONTAINER,IAC,MCP
 
       - name: Upload Results
         uses: actions/upload-artifact@v4
